# hydra.registry

./: .gitignore  DESIGN.md  README.md  RUN.md  default.nix  flake.nix
api/: hydra-registry-api.cabal
api/app/: Main.hs
api/src/: Api.hs  Cache.hs  Config.hs  Db.hs  Indexer.hs  Logging.hs  Main.hs  Metrics.hs
api/src/Api/: Types.hs  Validation.hs
api/src/Db/: Schema.hs
api/src/Explorer/: Client.hs  Sidecar.hs
api/src/Hydra/: Client.hs
api/src/Middleware/: RateLimit.hs
api/test/: ApiIntegrationSpec.hs  ApiTypesSpec.hs  ConfigSpec.hs  DbIntegrationSpec.hs  ExplorerClientSpec.hs  HydraClientSpec.hs  RateLimitSpec.hs  TestUtils.hs  ValidationSpec.hs
common/src/Common/: Api.hs
config/common/: explanatory-text  heads
dep/lens-aeson/: CHANGELOG.markdown  README.markdown  lens-aeson.cabal
dep/lens-aeson/.github/workflows/: haskell-ci.yml
dep/lens-aeson/src/Data/Aeson/: Lens.hs
dep/microlens/: github.json
frontend/: frontend.cabal
frontend/src/: Frontend.hs
static/: lib.js
website/: index.html  package-lock.json  package.json
website/src/: App.tsx
website/src/api/: client.ts
website/src/components/: AnimatedCounter.tsx  Footer.tsx  MouseSpotlight.tsx  Navbar.tsx  ParticleField.tsx  Typewriter.tsx
website/src/pages/: Landing.tsx  Register.tsx
website/src/styles/: global.css
