cabal-version: 3.0
name:          hydra-registry-api
version:       0.1.0.0
synopsis:      REST API for querying Hydra L2 UTxO state
license:       Apache-2.0
author:        Sasa Bogicevic
build-type:    Simple

common shared
  default-language: GHC2021
  default-extensions:
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DataKinds
    DuplicateRecordFields
    LambdaCase
    NoFieldSelectors
    OverloadedRecordDot
    OverloadedStrings
    TypeApplications
  ghc-options:
    -Wall

library
  import: shared
  hs-source-dirs: src
  exposed-modules:
    Api
    Api.Types
    Api.Validation
    Cache
    Config
    Db
    Db.Schema
    Hydra.Client
    Indexer
    Logging
    Metrics
    Middleware.RateLimit
  build-depends:
    , base >= 4.20 && < 5
    , aeson
    , async
    , bytestring
    , containers
    , hasql
    , hasql-pool
    , http-types
    , mtl
    , network-uri
    , rel8
    , servant
    , servant-server
    , stm
    , text
    , time
    , uuid
    , wai
    , wai-cors
    , wai-extra
    , warp
    , websockets
    , wuss

executable hydra-registry-api
  import: shared
  hs-source-dirs: app
  main-is: Main.hs
  ghc-options:
    -threaded
    -rtsopts
    "-with-rtsopts=-N"
  build-depends:
    , base >= 4.20 && < 5
    , aeson
    , async
    , hydra-registry-api
    , servant-server
    , stm
    , unix
    , wai-cors
    , wai-extra
    , warp

test-suite hydra-registry-api-test
  import: shared
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  ghc-options:
    -threaded
    -rtsopts
    "-with-rtsopts=-N"
  build-depends:
    , base >= 4.20 && < 5
    , aeson
    , bytestring
    , containers
    , hasql-pool
    , hspec
    , hspec-wai
    , http-types
    , hydra-registry-api
    , QuickCheck
    , servant-server
    , stm
    , text
    , time
    , hasql
    , wai
  other-modules:
    ApiIntegrationSpec
    ApiTypesSpec
    ConfigSpec
    DbIntegrationSpec
    HydraClientSpec
    RateLimitSpec
    TestUtils
    ValidationSpec
